syntax = "proto3";

package metrics;

option go_package = "github.com/ethpandaops/lab/proto/metrics";

message GetCurrentSlotRequest {}

message GetCurrentSlotResponse {
  int64 slot = 1;
}

service MetricsService {
  rpc GetCurrentSlot (GetCurrentSlotRequest) returns (GetCurrentSlotResponse);
} 